// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render overlay with a URL 1`] = `
<DocumentFragment>
  <div
    data-testid="dialog"
  >
    <div
      data-testid="form"
    >
      <div
        data-testid="form-field"
      >
        <span
          data-testid="form-field-label"
        >
          sulu_admin.link_url
        </span>
        <div
          data-testid="url"
        >
          http://www.sulu.io
        </div>
      </div>
      <div
        data-testid="form-field"
      >
        <span
          data-testid="form-field-label"
        >
          sulu_admin.link_target
        </span>
        <div
          data-testid="single-select"
        >
          <div
            data-testid="single-select-option"
          >
            sulu_admin.link_target_blank
          </div>
          <div
            data-testid="single-select-option"
          >
            sulu_admin.link_target_self
          </div>
          <div
            data-testid="single-select-option"
          >
            sulu_admin.link_target_parent
          </div>
          <div
            data-testid="single-select-option"
          >
            sulu_admin.link_target_top
          </div>
        </div>
      </div>
      <div
        data-testid="form-field"
      >
        <span
          data-testid="form-field-label"
        >
          sulu_admin.link_title
        </span>
        <div
          data-testid="input"
        />
      </div>
      <div
        data-testid="form-field"
      >
        <div
          data-testid="toggler"
        >
          sulu_admin.no_follow
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render overlay with an undefined URL 1`] = `
<DocumentFragment>
  <div
    data-testid="dialog"
  >
    <div
      data-testid="form"
    >
      <div
        data-testid="form-field"
      >
        <span
          data-testid="form-field-label"
        >
          sulu_admin.link_url
        </span>
        <div
          data-testid="url"
        />
      </div>
      <div
        data-testid="form-field"
      >
        <span
          data-testid="form-field-label"
        >
          sulu_admin.link_target
        </span>
        <div
          data-testid="single-select"
        >
          <div
            data-testid="single-select-option"
          >
            sulu_admin.link_target_blank
          </div>
          <div
            data-testid="single-select-option"
          >
            sulu_admin.link_target_self
          </div>
          <div
            data-testid="single-select-option"
          >
            sulu_admin.link_target_parent
          </div>
          <div
            data-testid="single-select-option"
          >
            sulu_admin.link_target_top
          </div>
        </div>
      </div>
      <div
        data-testid="form-field"
      >
        <span
          data-testid="form-field-label"
        >
          sulu_admin.link_title
        </span>
        <div
          data-testid="input"
        />
      </div>
      <div
        data-testid="form-field"
      >
        <div
          data-testid="toggler"
        >
          sulu_admin.no_follow
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render overlay with mailto URL 1`] = `
<DocumentFragment>
  <div
    data-testid="dialog"
  >
    <div
      data-testid="form"
    >
      <div
        data-testid="form-field"
      >
        <span
          data-testid="form-field-label"
        >
          sulu_admin.link_url
        </span>
        <div
          data-testid="url"
        >
          mailto:test@example.org
        </div>
      </div>
      <div
        data-testid="form-field"
      >
        <span
          data-testid="form-field-label"
        >
          sulu_admin.mail_subject
        </span>
        <div
          data-testid="input"
        />
      </div>
      <div
        data-testid="form-field"
      >
        <span
          data-testid="form-field-label"
        >
          sulu_admin.mail_body
        </span>
        <div
          data-testid="text-area"
        />
      </div>
      <div
        data-testid="form-field"
      >
        <span
          data-testid="form-field-label"
        >
          sulu_admin.link_title
        </span>
        <div
          data-testid="input"
        />
      </div>
      <div
        data-testid="form-field"
      >
        <div
          data-testid="toggler"
        >
          sulu_admin.no_follow
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
